V 1.1.1 of IIT KGP Eatries

--- a/Subway.html
+++ b/Subway.html
@@ -13,6 +13,7 @@
     <hr size="2" color="black" noshade>
     <p><img src="images2\subway.jpeg" alt=""></p>
   </center>
+  <h2>👉 Website : <a href="https://www.google.com/search?q=subway+iit+kgp&sxsrf=ALiCzsY7UItt5icRVSru19FGW4FoF_Dx1g%3A1667755357838&ei=Xe1nY6TkMtKM4-EPhKS00Ac&gs_ssp=eJzj4tVP1zc0TDI3TUsuSi40YLRSMagwTjRMMTExTLVMskw2SEkztDKosDQxMjMxTkwxNk9KTEtM8eIrLk0qT6xUyMwsUchOLwAAr_kU0g&oq=subway+iitkgp&gs_lp=Egxnd3Mtd2l6LXNlcnC4AQH4AQEqAggBMgcQIxiwAhgnMg0QLhiABBjHARivARgNMgUQABiGAzIFEAAYhgPCAgoQABhHGNYEGLADwgIFEAAYogTCAgQQABhDwgIFEAAYgATCAgsQLhiABBjHARivAcICCBAuGIAEGLEDwgIGEAAYBxgewgIIEAAYBxgeGAqQBgRI6SRQiQJYyBdwAXgByAEAkAEAmAHpAaABkRGqAQUwLjcuNOIDBCBBGADiAwQgRhgAiAYB&sclient=gws-wiz-serp">Details</a></h2>
   <h2>👉 Location : <a href="https://goo.gl/maps/kFXj6CB6QQBHVWHz7">SUBWAY</a></h2>
   <h2> Menu :</h2>
 
