--- a/Tikka.html
+++ b/Tikka.html
@@ -13,6 +13,7 @@
     <hr size="2" color="black" noshade>
     <p><img src="images2\tikka.jpeg" alt=""></p>
   </center>
+  <h2>👉 Website : <a href="https://www.google.com/search?q=tikka+iitkgp&sxsrf=ALiCzsZL1mBxz6A1WfAiHN3xUgtlwjrLPQ%3A1667755184639&ei=sOxnY77QJuCW4-EP-6uq4Ak&ved=0ahUKEwi-6OiaiJr7AhVgyzgGHfuVCpwQ4dUDCA8&uact=5&oq=tikka+iitkgp&gs_lp=Egxnd3Mtd2l6LXNlcnC4AQP4AQEyBBAjGCcyCxAuGIAEGMcBGK8BMgUQABiGA8ICDRAAGEcY1gQYyQMYsAPCAgoQABhHGNYEGLADwgIIEAAYkgMYsAPCAgUQABiiBMICBBAAGEPCAgUQABiABMICCBAuGIAEGLEDwgIGEAAYBxgewgIKEAAYBxgeGA8YCpAGCUjLKFDZE1iFJHACeAHIAQCQAQCYAeABoAGvD6oBBTAuNS414gMEIEEYAOIDBCBGGACIBgE&sclient=gws-wiz-serp">Details</a></h2>
   <h2>👉 Location : <a href="https://goo.gl/maps/bXxBp9LkVBsDHE9N8">TIKKA</a></h2>
   <h2> Menu :</h2>
 
