--- a/ccd.html
+++ b/ccd.html
@@ -13,7 +13,8 @@
     <hr size="2" color="black" noshade>
     <p><img src="images2\ccd2.jpg" alt=""></p>
   </center>
-  <h2>👉 Location : <a href="https://goo.gl/maps/KhDRt4GN3zDHwDCc6">CCD</a></h2>
+  <h2>👉 Website : <a href="https://www.google.com/search?q=cafe+coffee+day+iit+kharagpur&sxsrf=ALiCzsbQk7xiq9dakeQXeN27q4vGhYzX_w%3A1667754701055&ei=zepnY-z7Ate64-EPh8WZ-A4&ved=0ahUKEwislp20hpr7AhVX3TgGHYdiBu8Q4dUDCA8&uact=5&oq=cafe+coffee+day+iit+kharagpur&gs_lp=Egxnd3Mtd2l6LXNlcnC4AQP4AQEyCxAuGIAEGMcBGK8BMgIQJjICECYyBRAAGIYDMgUQABiGAzIFEAAYhgPCAgoQABhHGNYEGLADwgINEAAYRxjWBBjJAxiwA8ICCBAAGJIDGLADwgIGEAAYBxgewgIIEAAYCBgeGA_CAggQABgFGAcYHsICBhAAGAUYHsICCBAhGMMEGKABwgIKECEYwwQYChigAcICDRAuGIAEGMcBGK8BGA2QBglIkC9QkQRYkiNwAXgByAEAkAEAmAHXAaAB2BaqAQYwLjEzLjPiAwQgQRgA4gMEIEYYAIgGAQ&sclient=gws-wiz-serp">Details</a></h2>
+  <h2>👉 Location : <a href="https://goo.gl/maps/KhDRt4GN3zDHwDCc6">Cafe Coffee Day</a></h2>
   <h2> Menu :</h2>
 
   <CENTER>
